--- a/package.json
+++ b/package.json
@@ -1,14 +1,22 @@
 {
-  "name": "app_notes_mongo",
+  "name": "andina",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
     "dev": "nodemon src/index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://gitlab.com/NicolasAraya932/andina.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://gitlab.com/NicolasAraya932/andina/issues"
+  },
+  "homepage": "https://gitlab.com/NicolasAraya932/andina#readme",
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.2",
@@ -17,7 +25,7 @@
     "express-handlebars": "^8.0.1",
     "express-session": "^1.18.1",
     "method-override": "^3.0.0",
-    "mongoose": "^8.10.1",
+    "mongoose": "^8.11.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
   },
